# FinancialProject

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODEBASE.md  DOCKER.md  Dockerfile  Dockerfile.prod  Dockerfile.worker  LEARNING_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
api/: config.py  database.py  dependencies.py  logging_config.py  main.py  redis_client.py
app/: __init__.py
bot/: __init__.py  app.py  clarification.py  commit.py  delivery_send.py  formatting.py  gmail_handlers.py  gmail_listener.py  gmail_onboarding.py  gmail_pubsub.py  handlers.py  messages_es.py  nudges_send.py  pairing.py  pending.py  pending_db.py  pipeline.py  queries.py  rate_limit.py  redis_keys.py  undo.py  user_resolver.py
docs/: phase-6a-broken-tests.md  phase-6a-decisions.md  phase-6b-decisions.md  phase-6d-decisions.md
migrations/: env.py
scripts/: create_user.py  phase5a_smoke.sh  phase5b_smoke.sh  test_phase_6b_full.sh
tests/: conftest.py  test_bank_senders_cr.py  test_budget_service.py  test_clear_command.py  test_delivery_error_handling.py  test_delivery_sanitize.py  test_delivery_split.py  test_dispatcher_history_integration.py  test_dispatcher_logs_to_db.py  test_dispatcher_with_echo_tool.py  test_email_extractor.py  test_gmail_bank_selection_render.py  test_gmail_daily_worker.py  test_gmail_listener.py  test_gmail_mime.py  test_gmail_notifier.py  test_gmail_oauth_endpoints.py  test_gmail_oauth_exchange.py  test_gmail_oauth_state.py  test_gmail_onboarding.py  test_gmail_optional_sample.py  test_gmail_reconciler.py  (+34 more)
(+138 files in other folders)
