[project]
name = "finance-assistant"
version = "0.1.0"
description = "Personal finance assistant backend — Costa Rica MVP"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "redis==5.1.0",
    "httpx==0.27.2",
]

[dependency-groups]
dev = []
